Fix tool cards alignment

--- a/src/app/tools/tools.module.scss
+++ b/src/app/tools/tools.module.scss
@@ -1,7 +1,7 @@
 .mainContainer {
   display: flex;
   flex-wrap: wrap;
-  align-items: flex-start;
+  align-content: flex-start;
   gap: 2rem;
 
   padding: 7rem 1rem 10rem;
